add a base frontend and bckend code

--- a/frontend/env.example
+++ b/frontend/env.example
@@ -9,9 +9,13 @@ GOOGLE_CLIENT_SECRET=your-google-client-secret
 GITHUB_CLIENT_ID=your-github-client-id
 GITHUB_CLIENT_SECRET=your-github-client-secret
 
-# Backend API
+# Backend API Configuration
+# For local development (default)
 NEXT_PUBLIC_API_URL=http://localhost:3001
-API_URL=http://localhost:3001
+
+# For production (use your Azure backend URL)
+NEXT_PUBLIC_API_URL=https://resume-builder-backend.happyground-25b79e78.eastus.azurecontainerapps.io
+API_URL=https://resume-builder-backend.happyground-25b79e78.eastus.azurecontainerapps.io
 
 # OpenAI (for client-side usage if needed)
 NEXT_PUBLIC_OPENAI_API_KEY=your-openai-api-key
