--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -17,6 +17,14 @@ RUN npx prisma generate
 # Build the application
 RUN npm run build
 
+# Create non-root user
+RUN addgroup -g 1001 -S nodejs
+RUN adduser -S nestjs -u 1001
+
+# Change ownership of the app directory
+RUN chown -R nestjs:nodejs /app
+USER nestjs
+
 # Expose port
 EXPOSE 3001
 
