--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "license": "UNLICENSED",
     "scripts": {
         "build": "nest build",
+        "vercel-build": "npm run prisma:generate && npm run build",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
         "start": "nest start",
         "start:dev": "nest start --watch",
@@ -35,18 +36,20 @@
         "@nestjs/throttler": "^5.0.1",
         "@prisma/client": "^5.22.0",
         "bcrypt": "^5.1.1",
+        "chalk": "^4.1.2",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
         "express-rate-limit": "^7.1.5",
         "helmet": "^7.1.0",
+        "iterare": "^1.2.1",
         "multer": "^1.4.5-lts.1",
         "openai": "^4.20.0",
         "passport": "^0.7.0",
         "passport-jwt": "^4.0.1",
         "passport-local": "^1.0.0",
-        "prisma": "^5.6.0",
+        "prisma": "^5.22.0",
         "redis": "^4.6.12",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.8.1"
