--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,6 @@
         "@emotion/styled": "^11.11.0",
         "@hookform/resolvers": "^3.3.2",
         "@next-auth/prisma-adapter": "^1.0.7",
-        "@prisma/client": "^5.6.0",
         "axios": "^1.6.2",
         "framer-motion": "^10.16.16",
         "lucide-react": "^0.294.0",
@@ -30,6 +29,7 @@
         "zod": "^3.22.4"
     },
     "devDependencies": {
+        "@prisma/client": "^6.15.0",
         "@types/node": "^20.10.5",
         "@types/react": "^18.2.45",
         "@types/react-dom": "^18.2.18",
@@ -37,6 +37,7 @@
         "@typescript-eslint/parser": "^6.15.0",
         "eslint": "^8.56.0",
         "eslint-config-next": "14.0.4",
+        "prisma": "^6.15.0",
         "typescript": "^5.3.3"
     }
 }
