--- a/backend/package.json
+++ b/backend/package.json
@@ -42,6 +42,7 @@
         "compression": "^1.7.4",
         "cors": "^2.8.5",
         "express-rate-limit": "^7.1.5",
+        "handlebars": "^4.7.8",
         "helmet": "^7.1.0",
         "iterare": "^1.2.1",
         "multer": "^1.4.5-lts.1",
@@ -49,6 +50,8 @@
         "passport": "^0.7.0",
         "passport-jwt": "^4.0.1",
         "passport-local": "^1.0.0",
+        "pdf-parse": "^1.1.1",
+        "pdf2pic": "^3.2.0",
         "prisma": "^5.22.0",
         "redis": "^4.6.12",
         "reflect-metadata": "^0.1.13",
