--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,8 @@
         "@next-auth/prisma-adapter": "^1.0.7",
         "axios": "^1.6.2",
         "framer-motion": "^10.16.16",
+        "html2canvas": "^1.4.1",
+        "jspdf": "^3.0.2",
         "lucide-react": "^0.294.0",
         "next": "14.0.4",
         "next-auth": "^4.24.5",
@@ -26,11 +28,13 @@
         "react-dropzone": "^14.2.3",
         "react-hook-form": "^7.48.2",
         "react-markdown": "^9.0.1",
+        "react-pdf": "^10.1.0",
         "zod": "^3.22.4"
     },
     "devDependencies": {
         "@prisma/client": "^6.15.0",
         "@types/node": "^20.10.5",
+        "@types/pdf-parse": "^1.1.5",
         "@types/react": "^18.2.45",
         "@types/react-dom": "^18.2.18",
         "@typescript-eslint/eslint-plugin": "^6.15.0",
