Fix Railway deployment build issues
- Fixed build script to use 'nest build' instead of 'npx nest build'
- Updated Railway config to run prisma:generate before build
- Added Dockerfile for proper dependency installation
- Added .dockerignore to optimize build process
- Ensured dev dependencies are installed during build

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,14 @@
+# Use Node.js 18 LTS
 FROM node:18-alpine
 
+# Set working directory
 WORKDIR /app
 
 # Copy package files
 COPY package*.json ./
 
-# Install dependencies
-RUN npm ci --only=production
+# Install all dependencies (including dev dependencies for build)
+RUN npm ci
 
 # Copy source code
 COPY . .
