--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
         "react-dom": "^18.2.0",
         "react-dropzone": "^14.2.3",
         "react-hook-form": "^7.48.2",
+        "react-icons": "^5.5.0",
         "react-markdown": "^9.0.1",
         "react-pdf": "^10.1.0",
         "zod": "^3.22.4"
