--- a/backend/package.json
+++ b/backend/package.json
@@ -58,6 +58,7 @@
         "rxjs": "^7.8.1"
     },
     "devDependencies": {
+        "@eslint/js": "^9.35.0",
         "@nestjs/cli": "^10.4.9",
         "@nestjs/schematics": "^10.0.0",
         "@nestjs/testing": "^10.0.0",
