--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
-        "type-check": "tsc --noEmit"
+        "type-check": "tsc --noEmit",
+        "test": "echo \"No tests specified\" && exit 0"
     },
     "dependencies": {
         "@chakra-ui/icons": "^2.2.4",
@@ -38,10 +39,10 @@
         "@types/pdf-parse": "^1.1.5",
         "@types/react": "^18.2.45",
         "@types/react-dom": "^18.2.18",
-        "@typescript-eslint/eslint-plugin": "^6.15.0",
-        "@typescript-eslint/parser": "^6.15.0",
-        "eslint": "^8.56.0",
-        "eslint-config-next": "14.0.4",
+        "@typescript-eslint/eslint-plugin": "^6.21.0",
+        "@typescript-eslint/parser": "^6.21.0",
+        "eslint": "^8.57.1",
+        "eslint-config-next": "^14.0.4",
         "prisma": "^6.15.0",
         "typescript": "^5.3.3"
     }
