--- a/package.json
+++ b/package.json
@@ -11,7 +11,16 @@
         "deploy:frontend": "cd frontend && npx vercel --prod",
         "lint": "npm run lint:frontend && npm run lint:backend",
         "lint:frontend": "cd frontend && npm run lint",
-        "lint:backend": "cd backend && npm run lint"
+        "lint:backend": "cd backend && npm run lint",
+        "install:all": "npm run install:frontend && npm run install:backend",
+        "install:frontend": "cd frontend && npm install",
+        "install:backend": "cd backend && npm install",
+        "build:all": "npm run build:frontend && npm run build:backend",
+        "build:frontend": "cd frontend && npm run build",
+        "build:backend": "cd backend && npm run build",
+        "test:all": "npm run test:frontend && npm run test:backend",
+        "test:frontend": "cd frontend && npm run test",
+        "test:backend": "cd backend && npm run test"
     },
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^8.43.0",
