Fix GitHub Actions CI/CD pipeline issues
- Fixed backend ESLint configuration with proper Node.js globals
- Fixed unused variable errors by prefixing with underscore
- Added missing format:check scripts to all package.json files
- Installed prettier in frontend and formatted all code
- All lint and format checks now pass successfully

This should resolve the GitHub Actions workflow failures.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,13 @@
         "build:backend": "cd backend && npm run build",
         "test:all": "npm run test:frontend && npm run test:backend",
         "test:frontend": "cd frontend && npm run test",
-        "test:backend": "cd backend && npm run test"
+        "test:backend": "cd backend && npm run test",
+        "format:check": "npm run format:check:frontend && npm run format:check:backend",
+        "format:check:frontend": "cd frontend && npm run format:check",
+        "format:check:backend": "cd backend && npm run format:check",
+        "format:all": "npm run format:frontend && npm run format:backend",
+        "format:frontend": "cd frontend && npm run format",
+        "format:backend": "cd backend && npm run format"
     },
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^8.43.0",
