--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
         "build": "nest build",
         "vercel-build": "npm run prisma:generate && npm run build",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+        "format:check": "prettier --check \"src/**/*.ts\" \"test/**/*.ts\"",
         "start": "nest start",
         "start:dev": "nest start --watch",
         "start:debug": "nest start --debug --watch",
