--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,9 @@
         "start": "next start",
         "lint": "next lint",
         "type-check": "tsc --noEmit",
-        "test": "echo \"No tests specified\" && exit 0"
+        "test": "echo \"No tests specified\" && exit 0",
+        "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
+        "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,css,md}\""
     },
     "dependencies": {
         "@chakra-ui/icons": "^2.2.4",
@@ -43,6 +45,7 @@
         "@typescript-eslint/parser": "^6.21.0",
         "eslint": "^8.57.1",
         "eslint-config-next": "^14.0.4",
+        "prettier": "^3.6.2",
         "prisma": "^6.15.0",
         "typescript": "^5.3.3"
     }
