--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,6 +91,7 @@ jobs:
     - name: Deploy to Railway
       run: |
         npm install -g @railway/cli
-        railway login --token ${{ secrets.RAILWAY_TOKEN }}
-        railway up --service backend
+        echo "${{ secrets.RAILWAY_TOKEN }}" | railway login
+        railway up
       working-directory: ./backend
+      
